--- a/public/assets/css/krafto_cinergie.css
+++ b/public/assets/css/krafto_cinergie.css
@@ -1,6 +1,6 @@
 .card-image-background{
      overflow:hidden;
-     height:200px;
+     height:300px;
      display:flex;
      align-items:center;
      background-size: cover;
@@ -9,9 +9,14 @@
 
      background-position: center center;
 }
+
 .card .controls{
     display:flex;
+    margin-top:2em;
+    background-color: lightgrey;
+    padding:0.5em 0;
 }
+
 .card .controls .control{
     flex-basis: 50%; 
     flex-grow: 1;
