hiding close buttons for old otto-link

--- a/public/assets/css/krafto_cinergie.css
+++ b/public/assets/css/krafto_cinergie.css
@@ -53,4 +53,5 @@ iframe{
     font-size:1.1em;
 }
 
-.otto-suggestions a{display:none;}
+.otto-suggestions li a,
+.otto-link-qualified li a{display:none;}
