--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1,3 +1,8 @@
+/* header#header img.logo {height: 45px;} */
+.navbar-brand img {
+    height: 3em;
+}
+
 main:not(.home) {
     margin-top: 3em; /* 50px = 3.125em */
 }
