fixed home events

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -60,3 +60,7 @@ aside form {
     background: var(--bs-white);
     padding: 0.7em;
  }
+
+ #home-rdv-annonce article.card .otto-date{
+    text-transform: uppercase;
+ }
