--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1,10 +1,10 @@
 /* header#header img.logo {height: 45px;} */
 .navbar-brand img {
-    height: 3em;
+    height: 3rem;
 }
 
 main:not(.home) {
-    margin-top: 3em; /* 50px = 3.125em */
+    margin-top: 3rem; /* 50px = 3.125em */
 }
 
 main {
@@ -73,3 +73,9 @@ aside form {
 .card-img-overlay h3, .card-img-overlay p {
     color: var(--bs-white);
 } 
+
+/* #sidebar #filtres {background: var(--bs-white);padding: 25px; } */
+#sidebar #filtres {
+    background: var(--bs-white);
+    padding: 0.5em;
+ }
