--- a/public/assets/wejune/css/style.css
+++ b/public/assets/wejune/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 :root {
@@ -67,11 +67,13 @@ body {
 }
 
 body {
-   font-family: 'Poppins', sans-serif;
+   /* font-family: 'Poppins', sans-serif; */
+   font-family: system-ui, sans-serif;
+   font-weight: normal;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.7;
-   letter-spacing: 0.4px;
+   /* letter-spacing: 0.2px; */
    color: var(--bs-black);
    background: var(--bs-white);
 }
@@ -375,7 +377,7 @@ article.card.listing .date-item {
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: center;
+   justify-content: end;
    text-align: center;
 }
 
@@ -1202,6 +1204,8 @@ button.navbar-toggler:focus {
    div.single-post-slider .card img,
    article.paysage img {
       object-fit: cover;
+      height: 250px;
+
       object-position: center center;
       border-radius: 0.7rem 0 0;
    }
