--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1,3 +1,56 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
+@font-face {
+    font-family: 'Poppins';
+    src: local('Poppins Light'), local('Poppins-Light'),
+        url('/public/assets/font/Poppins-Light.woff2') format('woff2'),
+        url('/public/assets/font/Poppins-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+ }
+ 
+ @font-face {
+    font-family: 'Poppins';
+    src: local('Poppins Regular'), local('Poppins-Regular'),
+        url('/public/assets/font/Poppins-Regular.woff2') format('woff2'),
+        url('/public/assets/font/Poppins-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+ }
+ 
+ @font-face {
+    font-family: 'Poppins';
+    src: local('Poppins Medium'), local('Poppins-Medium'),
+        url('/public/assets/font/Poppins-Medium.woff2') format('woff2'),
+        url('/public/assets/font/Poppins-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+ }
+ 
+ @font-face {
+    font-family: 'Poppins';
+    src: local('Poppins SemiBold'), local('Poppins-SemiBold'),
+        url('/public/assets/font/Poppins-SemiBold.woff2') format('woff2'),
+        url('/public/assets/font/Poppins-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+ }
+ 
+body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.4px;
+    color: var(--bs-black);
+    background: var(--bs-white);
+ }
+ 
+
 /* header#header img.logo {height: 45px;} */
 .navbar-brand img {
     height: 3rem;
