--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -179,8 +179,11 @@ article.card.event-item .date-item {
     margin-left: 0;
 }
 
-.share a {
-    margin-right: 0.5em;
+.share.tiny,
+.share.tiny .actions,
+.share.tiny .actions > * {
+    display:block;
+    margin-top:1rem;
 }
 
 .share i {
@@ -188,10 +191,15 @@ article.card.event-item .date-item {
     padding: 0;
 }
 
-.share .socials {
-    margin-left: 0.6rem;
+.share .print {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 0.85rem;
+    cursor: pointer;
+    display:flex;
+    align-items: center;
+    gap:0.5rem;
 }
-
 .share .actions {
     display: flex;
     flex-grow: 1;
