--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -7,9 +7,9 @@
     font-weight: 300;
     font-style: normal;
     font-display: swap;
- }
- 
- @font-face {
+}
+
+@font-face {
     font-family: 'Poppins';
     src: local('Poppins Regular'), local('Poppins-Regular'),
         url('/public/assets/font/Poppins-Regular.woff2') format('woff2'),
@@ -17,9 +17,9 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
- }
- 
- @font-face {
+}
+
+@font-face {
     font-family: 'Poppins';
     src: local('Poppins Medium'), local('Poppins-Medium'),
         url('/public/assets/font/Poppins-Medium.woff2') format('woff2'),
@@ -27,9 +27,9 @@
     font-weight: 500;
     font-style: normal;
     font-display: swap;
- }
- 
- @font-face {
+}
+
+@font-face {
     font-family: 'Poppins';
     src: local('Poppins SemiBold'), local('Poppins-SemiBold'),
         url('/public/assets/font/Poppins-SemiBold.woff2') format('woff2'),
@@ -37,8 +37,8 @@
     font-weight: 600;
     font-style: normal;
     font-display: swap;
- }
- 
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: normal;
@@ -48,8 +48,8 @@ body {
     letter-spacing: 0.4px;
     color: var(--bs-black);
     background: var(--bs-white);
- }
- 
+}
+
 
 /* header#header img.logo {height: 45px;} */
 .navbar-brand img {
@@ -181,9 +181,9 @@ article.card.event-item .date-item {
 
 .share.tiny,
 .share.tiny .actions,
-.share.tiny .actions > * {
-    display:block;
-    margin-top:1rem;
+.share.tiny .actions>* {
+    display: block;
+    margin-top: 1rem;
 }
 
 .share i {
@@ -196,10 +196,11 @@ article.card.event-item .date-item {
     font-weight: 600;
     font-size: 0.85rem;
     cursor: pointer;
-    display:flex;
+    display: flex;
     align-items: center;
-    gap:0.5rem;
+    gap: 0.5rem;
 }
+
 .share .actions {
     display: flex;
     flex-grow: 1;
@@ -214,12 +215,13 @@ article.card.listing .date-item {
     justify-content: center;
 }
 
-.card .card-title{
-    color:var(--bs-primary);
+.card .card-title {
+    color: var(--bs-primary);
     text-transform: uppercase;
 }
-.card-complex{
-    background:black;
+
+.card-complex {
+    background: black;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto;
@@ -228,22 +230,24 @@ article.card.listing .date-item {
 
 
 .card-complex *:first-child,
-.card-complex *:last-child{
+.card-complex *:last-child {
     grid-column: span 2;
 }
 
 .card-complex *:nth-child(2),
 .card-complex *:nth-child(3) {
-    padding:0.5rem 1rem 0rem 1rem;
+    padding: 0.5rem 1rem 0rem 1rem;
 }
-.card-complex *:nth-child(3){
-    text-align:right;
+
+.card-complex *:nth-child(3) {
+    text-align: right;
 }
+
 .card-complex .card-title {
     color: white;
     text-transform: uppercase;
     text-align: center;
-    padding:1rem 0;
+    padding: 1rem 0;
 }
 
 .card-complex:not(.slide) img:hover {
@@ -252,14 +256,41 @@ article.card.listing .date-item {
 }
 
 @media screen and (min-width: 769px) {
-    .card img{
+    .card img {
         object-fit: contain;
         height: 250px;
         object-position: center center;
     }
+
     .card-complex img {
         object-fit: cover;
         height: 250px;
         object-position: center center;
     }
+}
+
+#article-single>header {
+    background-color: black;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 30rem;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+#article-single>header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+}
+
+#article-single>header img {
+    position: relative;
+    height: 30rem;
 }
