--- a/public/assets/wejune/css/style.css
+++ b/public/assets/wejune/css/style.css
@@ -1,7 +1,7 @@
 
 
 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+@import url("/public/assets/bootstrap-icons/font/bootstrap-icons.min.css");
 
 :root {
   
@@ -783,7 +783,8 @@ aside header {
    border-radius: 0em !important;
  }
 
- input[type="checkbox"].control_indicator:checked + label::before, input[type="radio"].control_indicator:checked + label::before {
+ /* input[type="checkbox"].control_indicator:checked + span::before, 
+ input[type="radio"].control_indicator:checked + span::before {
    background-color: #D3121B;
    left: 8px;
    top: 4px;
@@ -792,7 +793,7 @@ aside header {
    border: solid #ffffff;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
- }
+ } */
 
  .form-check-input:checked[type="radio"] {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e") !important;
