debootstrap movie card

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -235,6 +235,33 @@ article.card.listing .date-item {
 .card .card-title {
     color: var(--bs-primary);
     text-transform: uppercase;
+
+}
+
+.card-movie{
+    display: grid;
+    gap: 0 1rem;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card-movie *:first-child,
+.card-movie *:last-child {
+    grid-column: span 2;
+}
+
+.card-movie img{
+    height:15rem;
+    object-fit: cover;
+}
+
+.card-movie > *:nth-child(2){
+    text-align:right;
+}
+.card-movie h5{
+    margin: 0.5rem 0;
+    padding: 0;
+    text-align:center;
+    font-size: 1.1rem;
 }
 
 .card-complex {
